# TaskNotesManager

./: CMakeLists.txt  LICENSE  README.md  main.cpp
backend/: DatabaseManager.cpp  DatabaseManager.h  NoteModel.cpp  NoteModel.h  TaskModel.cpp  TaskModel.h  TodoModel.cpp  TodoModel.h  Translator.cpp  Translator.h
docs/: ANDROID.md
qml/: Main.qml
qml/components/: AboutDialog.qml  NoteEditor.qml  Sidebar.qml  TaskCard.qml  TaskList.qml
qml/pages/: Dashboard.qml  SettingsPage.qml
